<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Calculadora">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp">

        <LinearLayout
            android:id="@+id/linearLayout7"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/white"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:shadowColor="@color/black"
                android:shadowDx="2"
                android:text="@string/value_calculo"
                android:textColor="@color/primary"
                android:textSize="22sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout8"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="50dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout7">

            <Button
                android:id="@+id/button"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_um"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button2"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_2"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button3"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_3"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button4"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_4"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout9"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

            <Button
                android:id="@+id/button5"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_5"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button6"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button7"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_7"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button8"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_8"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout10"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9">

            <Button
                android:id="@+id/button9"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_9"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button11"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_0"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button10"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_10"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button12"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_11"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

            <Button
                android:id="@+id/button13"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_12"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button14"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_13"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button15"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_14"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/button16"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@color/primary"
                android:text="@string/label_valor_15"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>