<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalculadoraNotas">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:text="@string/calculadora_notas_title"
                android:textColor="@color/primary"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <EditText
                android:id="@+id/et_nota_01"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_primeira_nota"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/primary"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/primary" />

            <EditText
                android:id="@+id/et_nota_02"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_segunda_nota"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/primary"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/primary" />

            <EditText
                android:id="@+id/et_nota_03"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/hint_terceira_nota"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:textColor="@color/primary"
                android:textColorHighlight="@color/primary"
                android:textColorHint="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_vertical"
            android:orientation="horizontal"
            android:padding="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

            <TextView
                android:id="@+id/textViewSituacao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_situacao"
                android:textColor="@color/primary" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

            <Button
                android:id="@+id/btn_calcular_nota"
                android:layout_width="wrap_content"
                android:layout_height="60dp"
                android:background="@color/primary"
                android:text="@string/label_calcular_nota" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_desenvolvido"
            android:textColor="@color/primary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>